# libgvr

./: Daydream-Ready.txt  Description.txt  GVR_modify.txt  local.properties  logerror.txt  settings.gradle
controllerpaint/: build.gradle
controllerpaint/src/main/: AndroidManifest.xml
controllerpaint/src/main/cpp/: CMakeLists.txt  app_jni.cc  app_jni.h  demoapp.h  gvr.h  utils.cc  utils.h
cubemat/: build.gradle  local.properties
cubemat/libs/: gvr.aar
cubemat/src/main/: AndroidManifest.xml
cubemat/src/main/cpp/: CMakeLists.txt  HookBase.cpp  HookGVRTools.cpp  HookGVRTools.h  gvrInter.cpp  gvrglobal.h  gvrhook.cpp  instruction.cpp
egltest/: build.gradle
egltest/libs/: sdk-audio-1.10.0.aar  sdk-base-1.10.0.aar  sdk-common-1.10.0.aar
egltest/src/main/: AndroidManifest.xml
egltest/src/main/cpp/: gvr.h  gvrInter.cpp  gvrglobal.h  treasure_hunt_jni.cc
game/: build.gradle
game/src/main/: AndroidManifest.xml
gen-libs/src/main/cpp/: CMakeLists.txt
gen-libs/src/main/cpp/gperf/: CMakeLists.txt
gen-libs/src/main/cpp/gvr/: CMakeLists.txt
gen-libs/src/main/cpp/gvr/src/: UnityInterface.h  gvrfn.cpp  gvrfn.h
gradle/wrapper/: gradle-wrapper.properties
gvr/: build.gradle
gvr/src/main/: AndroidManifest.xml
gvr/src/main/cpp/: CMakeLists.txt  LogMessage.cpp  TeapotNativeActivity.cpp  UnityInterface.cpp  UnityInterface.h  gvrInter.cpp  gvrfn.cpp  gvrfn.h  gvrglobal.h  gvrtest.cpp  gvrtest.h
gvr14/: build.gradle
gvrIn/src/main/cpp/: LogMessage.cpp  UnityInterface.cpp  gvr_controller.h  gvrfn.cpp  gvrtest.cpp  gvrtest.h
gvrres/: build.gradle
gvrres12/: build.gradle
gvrres13/src/main/: AndroidManifest.xml
gvrres560/: build.gradle
hello-jni/: build.gradle
hello-jni/src/main/: AndroidManifest.xml
hello-jni/src/main/cpp/: CMakeLists.txt  hello-jni.c
hello-libs/src/main/cpp/: CMakeLists.txt  hello-libs.cpp
libs/: build.gradle
libs/src/main/cpp/: CMakeLists.txt
ndk-treasurehunt/: build.gradle
ndk-treasurehunt/libs/: sdk-audio-1.20.0.aar
ndk-treasurehunt/src/main/: AndroidManifest.xml
ndk-treasurehunt/src/main/cpp/: CMakeLists.txt
sdk-audio/: build.gradle
sdk-treasurehunt/: build.gradle  build.gradle.rej
sdk-treasurehunt/libs/: sdk-audio-1.60.1.aar  sdk-common-1.60.1.aar
sdk-treasurehunt/src/main/cpp/: CMakeLists.txt  gleshook.c  gvrInter.cpp  gvrInter.h  gvrfn.cpp  gvrfn.h  gvrglobal.h
testapp/src/main/cpp/: UnityInterface.cpp  UnityInterface.h
treasurehunt/: build.gradle
treasurehunt-code/: build.gradle
treasurehunt-code/src/main/: AndroidManifest.xml
treasurehunt/libs/: sdk-base-1.10.0.aar  sdk-common-1.10.0.aar
treasurehunt/src/main/: AndroidManifest.xml
treasurehunt/src/main/cpp/: CMakeLists.txt  CallStack.h  LogMessage.cpp  UnityInterface.cpp  gleshook.c  glresource.c  glresource.h  gvr.h  gvrInter.cpp  gvrInter.h  gvr_audio.h  gvr_types.h  gvrfn.cpp  gvrfn.h  gvrglobal.cpp  gvrglobal.h  gvrsource.cpp  gvrsource.h  gvrtest.cpp  gvrtest.h  mjtype.h  treasure_hunt_jni.cc  treasure_hunt_renderer.cc  treasure_hunt_renderer.h
treasurehunt/src/main/cpp/gleshook/: callstack.c  callstack.h  eglexthook.c  eglhook.c  elf_main.cpp  gl2exthook.c  gleshook.c  gleshook.h  hookutils.c  hookutils.h  threadhook.c
treasurehunt/src/main/cpp/gvrhook/: graphicshook.cpp  gvrhook.cpp  gvrhook.h  gvrhookfn.cpp  gvrhookfn.h  hookgvrfn.cpp  hookgvrfn.h
treasurehunt110/: build.gradle
treasurehunt110/libs/: sdk-common-1.100.0.aar
treasurehunt110/src/main/cpp/: gvrInter.h  treasure_hunt_renderer.h
treasurehunt1100/src/main/cpp/: gvrInter.cpp  treasure_hunt_renderer.cc
treasurehunt1101/: build.gradle
treasurehunt1101/src/main/cpp/: CMakeLists.txt  glresource.h  treasure_hunt_jni.cc
treasurehunt1101/src/main/cpp/gvrhook/: gvrhookfn.cpp  gvrhookfn.h  instruction.h
treasurehunt12/: build.gradle
treasurehunt12/src/main/cpp/: CMakeLists.txt  drawtex.h  treasure_hunt_renderer.cc  treasure_hunt_renderer.h
treasurehunt120/: build.gradle
treasurehunt120/src/main/: AndroidManifest.xml
treasurehunt14/: build.gradle
treasurehunt140/: build.gradle
treasurehunt140/libs/: sdk-common-1.40.0.aar
treasurehunt16/: build.gradle
treasurehunt18/: build.gradle
treasurehunt18/libs/: sdk-common-1.80.0.aar
treasurehunt180/: build.gradle
treasurehunt180/src/main/: AndroidManifest.xml
treasurehunthook/: build.gradle
treasurehunthook/libs/: sdk-base-1.10.0.aar  sdk-common-1.10.0.aar
treasurehunthook/src/main/: AndroidManifest.xml
treasurehuntndk/: build.gradle
treasurehuntndk/libs/: sdk-audio-1.40.0.aar  sdk-base-1.40.0.aar
treasurehuntndk/src/main/cpp/: CMakeLists.txt
unity/: build.gradle
unity/libs/: gvr.aar
unity/src/main/: AndroidManifest.xml
unity/src/main/cpp/: HookBase.h  (+10 more)
unity560/: build.gradle
unity560/src/main/: AndroidManifest.xml
unity560/src/main/cpp/: CMakeLists.txt  HookGVRTools.cpp  gvrInter.cpp  gvrInter.h  gvrfn.cpp  gvrfn.h  gvrglobal.cpp  gvrglobal.h  gvrhook.cpp  gvrhook.h
unitycode/: build.gradle
unitycode/src/main/: AndroidManifest.xml
unitygvr/: build.gradle
unitygvr/src/main/: AndroidManifest.xml
unitygvr103/: build.gradle
unitygvr103/libs/: gvr-common.aar
unitygvr103/src/main/: AndroidManifest.xml
unitygvr110/: build.gradle
unitygvr110/libs/: sdk-common-1.10.0.aar
unitygvr110/src/main/: AndroidManifest.xml
unitygvr12/: build.gradle
unitygvr12/src/main/: AndroidManifest.xml
unitygvr120/: build.gradle
unitygvr120/src/main/: AndroidManifest.xml
unitygvr120/src/main/cpp/: CMakeLists.txt  HookBase.h  glresource.c  gvrInter.h  gvrhook.cpp  gvrhook.h
unitygvr120/src/main/cpp/eglhook/: elf_eglhook.cpp  elf_eglhook.h
unitygvr120/src/main/cpp/gleshook/: callstack.c  eglexthook.c  eglhook.c  elf_hooker.cpp  elf_main.cpp  gl2exthook.c  gleshook.c  hookutils.c  threadhook.c
unitygvr120/src/main/cpp/gvrhook/: detour.cpp  graphicshook.cpp  gvrhook.cpp  gvrhook.h  gvrhookfn.cpp  gvrhookfn.h
unitygvr13/: build.gradle
unitygvr180/: build.gradle
unitygvr180/src/main/: AndroidManifest.xml
unitygvr560/: build.gradle
unitygvr560/src/main/: AndroidManifest.xml
(+760 files in other folders)
